# library-checker-solutions

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit  404.html  CMakeLists.txt  CMakePresets.json  README.md  benchmark.py  book.toml  compile_flags.txt  expander.py  index.html  index.py  mdbook.md  mdbook.py  pre_bench.sh  toc.html  toc.js
benchmark/: aplusb-main.Clang.html  aplusb-main.GNU.html  aplusb-main.html  associative_array-main.Clang.html  associative_array-main.GNU.html  associative_array-main.html  dynamic_sequence_range_affine_range_sum-main.Clang.html  dynamic_sequence_range_affine_range_sum-main.GNU.html  dynamic_sequence_range_affine_range_sum-main.html  dynamic_tree_subtree_add_subtree_sum-main.Clang.html  dynamic_tree_subtree_add_subtree_sum-main.GNU.html  dynamic_tree_subtree_add_subtree_sum-main.html  dynamic_tree_vertex_add_path_sum-main.Clang.html  dynamic_tree_vertex_add_path_sum-main.GNU.html  dynamic_tree_vertex_add_path_sum-main.html  dynamic_tree_vertex_add_subtree_sum-main.Clang.html  dynamic_tree_vertex_add_subtree_sum-main.GNU.html  dynamic_tree_vertex_add_subtree_sum-main.html  dynamic_tree_vertex_set_path_composite-main.Clang.html  dynamic_tree_vertex_set_path_composite-main.GNU.html  dynamic_tree_vertex_set_path_composite-main.html  jump_on_tree-main.Clang.html  jump_on_tree-main.GNU.html  jump_on_tree-main.html  jump_on_tree-slow.Clang.html  jump_on_tree-slow.GNU.html  jump_on_tree-slow.html  lca-fast.Clang.html  lca-fast.GNU.html  lca-fast.html  lca-main.Clang.html  lca-main.GNU.html  lca-main.html  lca-slow.Clang.html  lca-slow.GNU.html  lca-slow.html  many_aplusb-main.Clang.html  many_aplusb-main.GNU.html  many_aplusb-main.html  point_add_range_sum-main.Clang.html  (+62 more)
coverage/: aplusb-main.html  associative_array-main.html  dynamic_sequence_range_affine_range_sum-main.html  dynamic_tree_subtree_add_subtree_sum-main.html  dynamic_tree_vertex_add_path_sum-main.html  dynamic_tree_vertex_add_subtree_sum-main.html  dynamic_tree_vertex_set_path_composite-main.html  jump_on_tree-main.html  jump_on_tree-slow.html  lca-fast.html  lca-main.html  lca-slow.html  many_aplusb-main.html  point_add_range_sum-main.html  point_set_range_composite-fast.html  point_set_range_composite-main.html  point_set_range_composite-slow.html  predecessor_problem-main.html  range_affine_point_get-main.html  range_affine_range_sum-main.html  range_reverse_range_sum-main.html  range_reverse_range_sum-slow.html  static_range_sum-main.html  staticrmq-main.html  tree_diameter-fast.html  tree_diameter-main.html  tree_diameter-slow.html  unionfind-main.html  vertex_add_path_sum-main.html  vertex_add_path_sum-slow.html  vertex_add_subtree_sum-main.html  vertex_set_path_composite-logn.html  vertex_set_path_composite-main.html  vertex_set_path_composite-slow.html
coverage/aplusb/: main.html
coverage/aplusb-main/: example_00.html  example_01.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  random_05.html  random_06.html  random_07.html  random_08.html  random_09.html
coverage/associative_array/: main.html
coverage/associative_array-main/: 2_powers_00.html  example_00.html  many_0set_00.html  many_0set_sparse_00.html  max_many_updates_00.html  max_random_00.html  max_random_01.html  max_random_02.html  py_killer_00.html  py_killer_01.html  random_00.html  random_01.html  random_02.html  sparse_keys_00.html  sparse_keys_01.html  unordered_map_killer_00.html  unordered_map_killer_01.html  unordered_map_killer_02.html
coverage/dynamic_sequence_range_affine_range_sum/: main.html
coverage/dynamic_sequence_range_affine_range_sum-main/: example_00.html  extreme_insertion_00.html  extreme_insertion_01.html  extreme_insertion_02.html  max_00.html  max_01.html  max_02.html  max_03.html  max_04.html  max_random_00.html  max_random_01.html  max_random_02.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  small_00.html  small_01.html  small_02.html  small_03.html  small_04.html  small_05.html  small_06.html  small_07.html  small_08.html  small_09.html  wrong_avl_killer_00.html  wrong_avl_killer_01.html  wrong_splay_killer_00.html  wrong_splay_killer_01.html  wrong_splay_killer_02.html  wrong_splay_killer_03.html
coverage/dynamic_tree_subtree_add_subtree_sum/: main.html
coverage/dynamic_tree_subtree_add_subtree_sum-main/: almost_line_00.html  almost_line_01.html  example_00.html  max_random_00.html  max_random_01.html  max_random_02.html  max_random_03.html  max_random_04.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  small_00.html  small_01.html  small_02.html  small_03.html  small_04.html
coverage/dynamic_tree_vertex_add_path_sum/: main.html
coverage/dynamic_tree_vertex_add_path_sum-main/: almost_line_00.html  almost_line_01.html  example_00.html  max_random_00.html  max_random_01.html  max_random_02.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  small_00.html  small_01.html  small_02.html
coverage/dynamic_tree_vertex_add_subtree_sum/: main.html
coverage/dynamic_tree_vertex_add_subtree_sum-main/: almost_line_00.html  almost_line_01.html  example_00.html  max_random_00.html  max_random_01.html  max_random_02.html  max_random_03.html  max_random_04.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  small_00.html  small_01.html  small_02.html  small_03.html  small_04.html
coverage/dynamic_tree_vertex_set_path_composite-main/: almost_line_00.html  almost_line_01.html  example_00.html  example_01.html  max_random_00.html  max_random_01.html  max_random_02.html  medium_00.html  medium_01.html  medium_02.html  medium_03.html  medium_04.html  random_00.html  random_01.html  random_02.html  random_03.html  random_04.html  small_00.html  small_01.html  small_02.html  small_03.html  small_04.html
coverage/jump_on_tree-main/: example_00.html  (+20 more)
docs/: benchmark.md
include/: .clang-tidy  bundle.h  common.h  pack.h
lcov/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
(+1549 files in other folders)
